<resources>
    <string name="app_name">Luyện từ vựng toeic</string>
    <string name="unit_list">Danh sách bài học</string>
    <string name="input_hint_unit_name">Tên bài học</string>
    <string name="cancel">Hủy</string>
    <string name="add">Thêm</string>
    <string name="add_unit">Thêm bài học</string>
    <string name="stt">STT</string>
    <string name="word">Từ</string>
    <string name="mean">Nghĩa</string>
    <string name="type">Loại</string>
    <string name="enter_word">Nhập từ</string>
    <string name="enter_word_mean">Nghĩa tiếng việt</string>
    <string name="text_type">Từ loại:</string>
    <string name="btn_select_type">Chọn</string>
    <string name="text_none"><![CDATA[<none>]]></string>
    <string name="noun">Noun</string>
    <string name="verb">Verb</string>
    <string name="adj">Adj</string>
    <string name="adv">Adv</string>
    <string name="prep">Prep</string>
    <string name="unit_delete">Xóa unit</string>
    <string name="update">Cập nhật</string>
    <string name="delete_word">Xóa từ</string>
    <string name="add_word">Thêm từ</string>
    <string name="end">Kết thúc</string>
    <string name="mean_vi">Nghĩa tiếng việt</string>
    <string name="input_hint_en">Nhập từ tiếng anh</string>
    <string name="next">Tiếp theo</string>
</resources>