<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_4"
    tools:context=".activities.ShowListActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"/>

    <TextView
        android:id="@+id/textUnitName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/icBack"
        app:layout_constraintStart_toEndOf="@id/icBack"
        app:layout_constraintBottom_toBottomOf="@id/icBack"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Unit name"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/color_dark"
        android:layout_marginHorizontal="@dimen/_8sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textUnitName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@drawable/background_list_word"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/stt"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:visibility="visible"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingHorizontal="@dimen/_4sdp"/>

            <CheckBox
                android:id="@+id/checkBoxAll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/word"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/mean"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/color_4"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWords"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:clipToPadding="false"
            android:visibility="gone"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_word"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/color_4"
        android:layout_margin="@dimen/_16sdp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRemoveWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_word"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toStartOf="@id/fabAddWord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/color_4"
        android:layout_margin="@dimen/_16sdp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLearn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_word"
        android:src="@drawable/ic_learn"
        app:layout_constraintEnd_toStartOf="@id/fabRemoveWord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/color_4"
        android:layout_margin="@dimen/_16sdp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAddWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/background_popup"
        android:elevation="@dimen/_8sdp"
        android:visibility="gone">

        <EditText
            android:id="@+id/inputWordEnglish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inputWordVietnamese"
            android:hint="@string/enter_word"
            android:textColor="@color/color_dark"
            android:textColorHint="@color/color_3"
            android:imeOptions="actionNext"
            android:paddingHorizontal="@dimen/_8sdp"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:background="@drawable/background_input" />

        <EditText
            android:id="@+id/inputWordVietnamese"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@id/inputWordEnglish"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/enter_word_mean"
            android:textColor="@color/color_dark"
            android:textColorHint="@color/color_3"
            android:imeOptions="actionNext"
            android:paddingHorizontal="@dimen/_8sdp"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_8sdp"/>

        <LinearLayout
            android:id="@+id/llType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputWordVietnamese"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_type"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/color_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_none"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/color_1"
                android:gravity="center_vertical"
                android:textStyle="italic"
                android:layout_marginHorizontal="@dimen/_32sdp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonType"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputWordVietnamese"
                android:layout_weight="1"
                android:text="@string/btn_select_type"
                android:textSize="@dimen/_8ssp"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/llType"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/background_button"
                android:text="@string/add"
                android:textColor="@color/color_4"
                android:textSize="@dimen/_12ssp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClose"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/background_button"
                android:text="@string/cancel"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/_12ssp"
                android:backgroundTint="@color/color_red"
                android:layout_weight="1"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>