<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_24sdp"
    android:background="@color/color_1"
    tools:context=".activities.MainActivity"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/textUnitList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_list"
        android:textColor="@color/color_4"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp"
        android:background="@color/color_4"
        app:layout_constraintTop_toBottomOf="@id/textUnitList"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_12sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUnits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/_4sdp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_unit"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/color_4"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAddUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/background_popup"
        android:elevation="@dimen/_8sdp"
        android:visibility="gone">

        <EditText
            android:id="@+id/inputUnitName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/input_hint_unit_name"
            android:textColor="@color/color_dark"
            android:textColorHint="@color/color_3"
            android:background="@drawable/background_input"
            android:paddingHorizontal="@dimen/_8sdp"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background_button"
            android:text="@string/cancel"
            android:textColor="@color/color_dark"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/inputUnitName"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/color_red"
            android:layout_marginTop="@dimen/_8sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background_button"
            android:text="@string/add"
            android:textColor="@color/color_4"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/inputUnitName"
            app:layout_constraintEnd_toStartOf="@id/buttonClose"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUpdateUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/background_popup"
        android:elevation="@dimen/_8sdp"
        android:visibility="gone">

        <EditText
            android:id="@+id/inputUnitNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/input_hint_unit_name"
            android:textColor="@color/color_dark"
            android:textColorHint="@color/color_3"
            android:background="@drawable/background_input"
            android:paddingHorizontal="@dimen/_8sdp"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/inputUnitNameUpdate"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonUpdateUnit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/background_button"
                android:text="@string/update"
                android:textColor="@color/color_4"
                android:textSize="@dimen/_10ssp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDeleteUnit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/background_button"
                android:text="@string/unit_delete"
                android:textColor="@color/color_4"
                android:textSize="@dimen/_10ssp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCloseUpdate"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/background_button"
                android:text="@string/cancel"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/_10ssp"
                android:backgroundTint="@color/color_red"
                android:layout_weight="1"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>