<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LearnActivity"
    android:background="@color/color_4">

    <LinearLayout
        android:id="@+id/llCorrectWrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_confirm"
            android:tint="@color/color_success"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textCorrectCounter"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:text="25"
            android:textSize="@dimen/_16sdp"
            android:gravity="start"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_close"
            android:tint="@color/color_red"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textWrongCounter"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:text="25"
            android:textSize="@dimen/_16sdp"
            android:gravity="start"
            android:layout_weight="1"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp"
        android:progress="25"
        style="@android:style/Widget.ProgressBar.Horizontal"
        app:layout_constraintTop_toBottomOf="@id/llCorrectWrong"
        android:layout_marginHorizontal="@dimen/_8sdp"/>

    <LinearLayout
        android:id="@+id/llMean"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_12sdp"
        android:weightSum="8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/mean_vi"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/color_4"
            android:background="@color/color_1"/>

        <TextView
            android:id="@+id/textMean"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Đây là nghĩa của từ"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textColor="@color/color_dark"
            android:background="@drawable/background_border"
            android:maxLines="3"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:text="Từ loại"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/color_4"
            android:background="@color/color_1"
            android:layout_marginTop="@dimen/_24ssp"/>

        <TextView
            android:id="@+id/textType"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Đây là từ loại"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textColor="@color/color_dark"
            android:background="@drawable/background_border"
            android:maxLines="1"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/inputWordEnglish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/input_hint_en"
            android:textColor="@color/color_dark"
            android:textColorHint="@color/color_3"
            android:imeOptions="actionDone"
            android:paddingHorizontal="@dimen/_8sdp"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_16sdp"
            android:elevation="@dimen/_16sdp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_cover"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBarLoading"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llWrongWord"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/background_wrong_check"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="Bạn đã trả lời sai"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/textCorrect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="Từ đúng"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:background="@color/color_success"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/textWrong"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="Từ sai đã nhập"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:background="@color/color_red"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCloseResult"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background_button_end"
            android:backgroundTint="@color/color_white"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="Ok"
            android:textColor="@color/color_dark"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/background_button_end"
        app:layout_constraintBottom_toTopOf="@id/btnEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/next"
        android:textColor="@color/color_white"
        android:backgroundTint="@color/color_1"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnd"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/background_button_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/end"
        android:textColor="@color/color_dark"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>